Nuget Package Specifications

--- a/src/ESFA.DC.ILR.Model.Interface/ESFA.DC.ILR.Model.Interface.csproj
+++ b/src/ESFA.DC.ILR.Model.Interface/ESFA.DC.ILR.Model.Interface.csproj
@@ -65,5 +65,8 @@
     <Compile Include="ISourceFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ESFA.DC.ILR.Model.Interface.nuspec" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
