--- a/src/ESFA.DC.ILR.Model/ESFA.DC.ILR.Model.csproj
+++ b/src/ESFA.DC.ILR.Model/ESFA.DC.ILR.Model.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ESFA.DC.ILR.Model.nuspec" />
     <None Include="GenerateModel.bat" />
     <None Include="ILR-2017-18.xsd">
       <SubType>Designer</SubType>
